--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -27,107 +27,94 @@
                 android:layout_height="wrap_content"
                 app:expandedTitleGravity="top"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
-                <androidx.constraintlayout.widget.ConstraintLayout
+                <androidx.appcompat.widget.Toolbar
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:background="@drawable/bg_card"
-                    android:gravity="bottom"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content"
+                    app:layout_collapseMode="pin"
+                    android:background="@color/light_green"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-                    <androidx.appcompat.widget.Toolbar
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="#00000000"
-                        app:layout_collapseMode="pin"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
+                        android:layout_marginHorizontal="20dp"
+                        android:gravity="center|top"
+                        android:orientation="vertical"
+                        android:paddingBottom="15dp">
 
-                        <LinearLayout
+
+
+                        <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="20dp"
-                            android:gravity="center|top"
-                            android:orientation="vertical"
-                            android:paddingBottom="15dp">
+                            android:layout_marginTop="10dp"
+                            android:orientation="horizontal">
 
                             <ImageView
+                                android:id="@+id/img_back"
+                                android:layout_alignParentStart="true"
+                                android:layout_marginTop="10dp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="15dp"
                                 android:contentDescription="@string/image"
-                                android:src="@drawable/ic_logo" />
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/ic_back_white"/>
 
-                            <RelativeLayout
-                                android:layout_width="match_parent"
+                            <TextView
+                                android:id="@+id/title"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
-                                android:orientation="horizontal">
+                                android:layout_alignParentTop="true"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginEnd="50dp"
+                                android:text="My address"
+                                android:textColor="@color/white"
+                                android:textSize="30sp"
+                                android:textStyle="bold" />
 
+                            <androidx.coordinatorlayout.widget.CoordinatorLayout
+                                android:layout_width="33dp"
+                                android:layout_height="30dp"
+                                android:layout_marginTop="5dp"
+                                android:id="@+id/cl_cart"
+                                android:layout_alignParentEnd="true">
                                 <ImageView
-                                    android:id="@+id/img_back"
-                                    android:layout_alignParentStart="true"
-                                    android:layout_marginTop="10dp"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="26dp"
+                                    android:layout_height="26dp"
+                                    android:layout_gravity="bottom|left"
                                     android:contentDescription="@string/image"
-                                    android:scaleType="centerCrop"
-                                    android:src="@drawable/ic_back_white"/>
-
+                                    android:src="@drawable/ic_cart"
+                                    android:id="@+id/img_cart"
+                                    tools:ignore="RtlHardcoded"
+                                    app:tint="@color/white" />
                                 <TextView
-                                    android:id="@+id/title"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_alignParentTop="true"
-                                    android:layout_centerHorizontal="true"
-                                    android:layout_marginEnd="50dp"
-                                    android:text="My address"
+                                    android:layout_gravity="right|top"
+                                    android:layout_width="14dp"
+                                    android:layout_height="14dp"
+                                    android:background="@drawable/bg_quantity_in_cart"
+                                    android:textSize="10dp"
+                                    android:text="1"
+                                    android:textAlignment="center"
                                     android:textColor="@color/white"
-                                    android:textSize="30sp"
-                                    android:textStyle="bold" />
-
-                                <androidx.coordinatorlayout.widget.CoordinatorLayout
-                                    android:layout_width="33dp"
-                                    android:layout_height="30dp"
-                                    android:layout_marginTop="5dp"
-                                    android:id="@+id/cl_cart"
-                                    android:layout_alignParentEnd="true">
-                                    <ImageView
-                                        android:layout_width="26dp"
-                                        android:layout_height="26dp"
-                                        android:layout_gravity="bottom|left"
-                                        android:contentDescription="@string/image"
-                                        android:src="@drawable/ic_cart"
-                                        android:id="@+id/img_cart"
-                                        tools:ignore="RtlHardcoded"
-                                        app:tint="@color/white" />
-                                    <TextView
-                                        android:layout_gravity="right|top"
-                                        android:layout_width="14dp"
-                                        android:layout_height="14dp"
-                                        android:background="@drawable/bg_quantity_in_cart"
-                                        android:textSize="10dp"
-                                        android:text="1"
-                                        android:textAlignment="center"
-                                        android:textColor="@color/white"
-                                        tools:ignore="RtlCompat" />
-                                </androidx.coordinatorlayout.widget.CoordinatorLayout>
+                                    tools:ignore="RtlCompat" />
+                            </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginEnd="10dp"
-                                        android:layout_below="@id/title"
-                                        android:layout_centerHorizontal="true"
-                                        android:layout_marginTop="30dp"
-                                        android:text="Tap to select default address"
-                                        android:textColor="#272422"
-                                        android:textSize="16dp" />
-                            </RelativeLayout>
-                        </LinearLayout>
-                    </androidx.appcompat.widget.Toolbar>
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@id/title"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginEnd="10dp"
+                                android:text="Tap to select default address"
+                                android:textColor="#272422"
+                                android:textSize="16dp" />
+                        </RelativeLayout>
+                    </LinearLayout>
+                </androidx.appcompat.widget.Toolbar>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
         <LinearLayout
