--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -29,8 +29,8 @@
             app:layout_scrollFlags="noScroll">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="@drawable/bg_card"
+            android:layout_height="wrap_content"
+            android:background="@color/light_green"
             android:gravity="bottom"
             android:orientation="vertical">
 
@@ -50,13 +50,6 @@
                     android:gravity="center|top"
                     android:orientation="vertical"
                     android:paddingBottom="15dp">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:contentDescription="@string/image"
-                        android:src="@drawable/ic_logo" />
 
                     <RelativeLayout
                         android:layout_width="match_parent"
