--- a/app/src/main/res/layout/fragment_check_out.xml
+++ b/app/src/main/res/layout/fragment_check_out.xml
@@ -44,8 +44,8 @@
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
-                            android:layout_height="160dp"
-                            android:background="@drawable/bg_card"
+                            android:layout_height="wrap_content"
+                            android:background="@color/light_green"
                             android:gravity="bottom"
                             android:orientation="vertical">
 
@@ -66,12 +66,7 @@
                                     android:orientation="vertical"
                                     android:paddingBottom="15dp">
 
-                                    <ImageView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginTop="15dp"
-                                        android:contentDescription="@string/image"
-                                        android:src="@drawable/ic_logo" />
+
 
                                     <RelativeLayout
                                         android:layout_width="match_parent"
