--- a/app/src/main/res/layout/fragment_product_of_kind.xml
+++ b/app/src/main/res/layout/fragment_product_of_kind.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewModel"
             type="com.example.aposs_buyer.viewmodel.ProductOfKindViewModel" />
@@ -34,8 +33,8 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:background="@drawable/bg_card"
+                    android:layout_height="wrap_content"
+                    android:background="@color/light_green"
                     android:gravity="bottom"
                     android:orientation="vertical">
 
@@ -56,12 +55,6 @@
                             android:orientation="vertical"
                             android:paddingBottom="15dp">
 
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="15dp"
-                                android:contentDescription="@string/image"
-                                android:src="@drawable/ic_logo" />
 
                             <RelativeLayout
                                 android:layout_width="match_parent"
