--- a/app/src/main/res/layout/fragment_product_rating.xml
+++ b/app/src/main/res/layout/fragment_product_rating.xml
@@ -27,8 +27,8 @@
 
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:background="@drawable/bg_card"
+                android:layout_height="wrap_content"
+                android:background="@color/light_green"
                 app:layout_collapseMode="pin">
 
 
@@ -40,12 +40,6 @@
                     android:orientation="vertical"
                     android:paddingBottom="15dp">
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:contentDescription="@string/image"
-                        android:src="@drawable/ic_logo" />
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -186,7 +180,7 @@
         <LinearLayout
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="210dp"
+            android:layout_marginTop="140dp"
             android:background="@color/light_green"
             android:elevation="1dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -206,7 +200,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="220dp"
+            android:layout_marginTop="155dp"
             android:background="@drawable/bg_detail_component">
 
             <androidx.recyclerview.widget.RecyclerView
