--- a/app/src/main/res/layout/fragment_rate_now.xml
+++ b/app/src/main/res/layout/fragment_rate_now.xml
@@ -30,8 +30,8 @@
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:background="@drawable/bg_card"
+                    android:layout_height="wrap_content"
+                    android:background="@color/light_green"
                     android:gravity="bottom"
                     android:orientation="vertical">
 
@@ -52,12 +52,6 @@
                             android:orientation="vertical"
                             android:paddingBottom="15dp">
 
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="15dp"
-                                android:contentDescription="@string/image"
-                                android:src="@drawable/ic_logo" />
 
                             <RelativeLayout
                                 android:layout_width="match_parent"
@@ -120,7 +114,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_below="@id/title"
                                     android:layout_centerHorizontal="true"
-                                    android:layout_marginTop="30dp"
+                                    android:layout_marginTop="10dp"
                                     android:layout_marginEnd="10dp"
                                     android:text="Tap to rate"
                                     android:textColor="#272422"
