--- a/app/src/main/res/layout/fragment_rated.xml
+++ b/app/src/main/res/layout/fragment_rated.xml
@@ -29,8 +29,8 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:background="@drawable/bg_card"
+                android:layout_height="wrap_content"
+                android:background="@color/light_green"
                 android:gravity="bottom"
                 android:orientation="vertical">
 
@@ -50,13 +50,6 @@
                         android:gravity="center|top"
                         android:orientation="vertical"
                         android:paddingBottom="15dp">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="15dp"
-                            android:contentDescription="@string/image"
-                            android:src="@drawable/ic_logo" />
 
                         <RelativeLayout
                             android:layout_width="match_parent"
@@ -119,7 +112,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_below="@id/title"
                                 android:layout_centerHorizontal="true"
-                                android:layout_marginTop="30dp"
+                                android:layout_marginTop="10dp"
                                 android:layout_marginEnd="10dp"
                                 android:text="Tap to view detail or change"
                                 android:textColor="#272422"
