--- a/app/src/main/res/layout/fragment_user_detail.xml
+++ b/app/src/main/res/layout/fragment_user_detail.xml
@@ -38,8 +38,8 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:background="@drawable/bg_card"
+                    android:layout_height="150dp"
+                    android:background="@color/light_green"
                     android:gravity="bottom"
                     android:orientation="vertical"/>
 
@@ -56,17 +56,11 @@
                         android:orientation="vertical"
                         android:paddingBottom="15dp">
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="15dp"
-                            android:contentDescription="@string/image"
-                            android:src="@drawable/ic_logo" />
 
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="20dp"
                             >
 
                             <ImageView
@@ -132,7 +126,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="125dp"
+                        android:layout_marginTop="80dp"
                         android:orientation="vertical">
 
                         <LinearLayout
@@ -165,7 +159,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingHorizontal="20dp"
-                    android:layout_marginTop="190dp"
+                    android:layout_marginTop="130dp"
                     android:layout_marginBottom="20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
