--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,34 +5,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".uicontroler.activity.MainActivity"
     >
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <fragment
             app:defaultNavHost= "true"
-            android:layout_marginBottom="52dp"
-            android:id="@+id/navHostFragment"
+            android:id="@+id/fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             app:navGraph ="@navigation/navigation_main"
             android:layout_width="match_parent"
+            android:layout_above="@id/bottom_navigation"
             android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
         </fragment>
-
-        <com.etebarian.meowbottomnavigation.MeowBottomNavigation
-            android:id="@+id/meowBottomNavigation"
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            app:menu="@menu/menu_home_item"
+            android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
-            android:layout_height="72dp"
-            android:layout_gravity="bottom"
-            app:mbn_selectedIconColor="@color/white"
-            app:mbn_circleColor="@color/active_button"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-        </com.etebarian.meowbottomnavigation.MeowBottomNavigation>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="wrap_content"/>
+    </RelativeLayout>
 </layout>
