--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -10,7 +10,6 @@
         android:background="@color/back_ground"
         tools:context=".uicontroler.fragment.FavoriteFragment">
 
-        <!-- TODO: Update blank fragment layout -->
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,14 +24,38 @@
                 app:expandedTitleGravity="top"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
+                <RelativeLayout
+                    android:background="@color/light_green"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp">
 
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="55dp"
+                        android:text="@string/favorite"
+                        android:textColor="@color/white"
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
+                    <ImageView
+                        android:id="@+id/lnAboutUs"
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        android:layout_marginStart="13dp"
+                        android:layout_marginTop="52dp"
+                        android:contentDescription="@string/image"
+                        android:src="@drawable/ic_logo" />
+                </RelativeLayout>
                 <androidx.appcompat.widget.Toolbar
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/light_green"
                     app:layout_collapseMode="pin">
 
                     <RelativeLayout
+                        android:layout_marginBottom="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -45,7 +68,6 @@
                             android:id="@+id/toolBox"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
                             android:orientation="horizontal">
 
                             <com.google.android.material.textfield.TextInputLayout
@@ -73,7 +95,7 @@
                             </com.google.android.material.textfield.TextInputLayout>
 
                             <ImageView
-                                android:id="@+id/img_notification"
+                                android:id="@+id/notification"
                                 android:layout_width="38dp"
                                 android:layout_height="38dp"
                                 android:layout_alignParentEnd="true"
@@ -82,26 +104,6 @@
                                 android:src="@drawable/ic__notifications" />
                         </RelativeLayout>
 
-                        <TextView
-                            android:id="@+id/title"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/toolBox"
-                            android:layout_centerHorizontal="true"
-                            android:layout_marginVertical="10dp"
-                            android:text="@string/favorite"
-                            android:textColor="@color/white"
-                            android:textSize="30sp"
-                            android:textStyle="bold" />
-                        <ImageView
-                            android:id="@+id/lnAboutUs"
-                            android:layout_width="wrap_content"
-                            android:layout_height="20dp"
-                            android:layout_below="@+id/toolBox"
-                            android:layout_marginStart="-10dp"
-                            android:layout_marginTop="7dp"
-                            android:contentDescription="@string/image"
-                            android:src="@drawable/ic_logo" />
                     </RelativeLayout>
                 </androidx.appcompat.widget.Toolbar>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -125,6 +127,7 @@
                     app:tabTextColor="@color/disable_pray" />
 
                 <androidx.viewpager2.widget.ViewPager2
+                    android:layout_marginTop="3dp"
                     android:id="@+id/viewPager"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
