--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,11 +16,10 @@
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginHorizontal="10dp"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
             <LinearLayout
-
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -50,40 +49,39 @@
                         app:layout_constraintBottom_toBottomOf="@+id/categories"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
-
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="260dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/categories">
 
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="match_parent"
-                            android:layout_height="160dp"
-                            android:layout_marginHorizontal="13dp"
-                            android:shadowColor="@color/white"
-                            app:cardCornerRadius="20dp"
-                            app:cardElevation="4dp"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
-                            <!--Put automatic page view here-->
-                            <androidx.viewpager2.widget.ViewPager2
-                                categoriesData="@{viewModel.categories}"
-                                android:id="@+id/imageViewPager"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"/>
-                        </androidx.cardview.widget.CardView>
+<!--                        <androidx.cardview.widget.CardView-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="160dp"-->
+<!--                            android:layout_marginHorizontal="3dp"-->
+<!--                            android:shadowColor="@color/white"-->
+<!--                            app:cardCornerRadius="20dp"-->
+<!--                            app:cardElevation="4dp"-->
+<!--                            app:layout_constraintEnd_toEndOf="parent"-->
+<!--                            app:layout_constraintStart_toStartOf="parent"-->
+<!--                            app:layout_constraintTop_toTopOf="parent">-->
+<!--                            &lt;!&ndash;Put automatic page view here&ndash;&gt;-->
+<!--                            <androidx.viewpager2.widget.ViewPager2-->
+<!--                                categoriesData="@{viewModel.categories}"-->
+<!--                                android:id="@+id/imageViewPager"-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="match_parent"/>-->
+<!--                        </androidx.cardview.widget.CardView>-->
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="match_parent"
                             android:layout_marginHorizontal="3dp"
-                            android:layout_height="135dp"
+                            android:layout_height="250dp"
                             android:layout_marginBottom="10dp"
-                            app:cardCornerRadius="20dp"
+                            app:cardCornerRadius="10dp"
                             app:cardElevation="3dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -93,18 +91,24 @@
                                 android:id="@+id/cl_category"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent">
+                                <androidx.viewpager2.widget.ViewPager2
+                                    categoriesData="@{viewModel.categories}"
+                                    android:id="@+id/imageViewPager"
+                                    android:layout_width="match_parent"
+                                    app:layout_constraintTop_toTopOf="parent"
+                                    android:layout_height="160dp"/>
 
                                 <me.relex.circleindicator.CircleIndicator3
                                     android:id="@+id/indicator"
                                     indicatorSize="@{viewModel.categories.size()}"
                                     android:layout_width="wrap_content"
                                     android:layout_height="15dp"
-                                    android:layout_marginTop="50dp"
+                                    android:layout_marginTop="5dp"
                                     app:ci_drawable="@drawable/bg_cycle_indicator"
                                     app:ci_drawable_unselected="@drawable/bg_cycle_unselected_indicator"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent" />
+                                    app:layout_constraintTop_toBottomOf="@id/imageViewPager" />
                                 <TextView
                                     android:id="@+id/categoryName"
                                     android:layout_width="wrap_content"
@@ -164,15 +168,12 @@
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
                         </androidx.cardview.widget.CardView>
-
-
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="230dp">
+                    android:layout_height="215dp">
                     <TextView
-                        android:layout_marginTop="5dp"
                         android:id="@+id/ranking"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -188,8 +189,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="160dp"
                         android:layout_marginHorizontal="3dp"
-                        android:layout_marginTop="15dp"
-                        app:cardCornerRadius="20dp"
+                        android:layout_marginTop="5dp"
+                        app:cardCornerRadius="10dp"
                         app:cardElevation="4dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -201,14 +202,12 @@
                             android:layout_height="match_parent"/>
                     </androidx.cardview.widget.CardView>
 
-
                     <androidx.cardview.widget.CardView
-
                         android:id="@+id/cardView"
                         android:layout_width="150dp"
                         android:layout_height="35dp"
                         android:layout_marginStart="3dp"
-                        android:layout_marginBottom="15dp"
+                        android:layout_marginBottom="5dp"
                         app:cardBackgroundColor="@color/light_green"
                         app:cardElevation="4dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -224,7 +223,6 @@
                             android:text="@{viewModel.currentProductKind}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
-
                         </TextView>
                     </androidx.cardview.widget.CardView>
 
@@ -257,7 +255,7 @@
                         app:layout_constraintTop_toTopOf="parent"/>
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/products"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="5dp"
                         tools:listitem="@layout/item_product"
                         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                         app:spanCount="2"
@@ -286,14 +284,37 @@
                 app:expandedTitleGravity="top"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-
+                <RelativeLayout
+                    android:background="@color/light_green"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp">
+                    <TextView
+                        android:layout_alignParentTop="true"
+                        android:layout_marginTop="55dp"
+                        android:id="@+id/title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:text="@string/home"
+                        android:textColor="@color/white"
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
+                    <ImageView
+                        android:id="@+id/lnAboutUs"
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        android:layout_marginStart="13dp"
+                        android:layout_marginTop="52dp"
+                        android:contentDescription="@string/image"
+                        android:src="@drawable/ic_logo" />
+                </RelativeLayout>
                 <androidx.appcompat.widget.Toolbar
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/light_green"
                     app:layout_collapseMode="pin">
 
                     <RelativeLayout
+                        android:layout_marginBottom="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -306,7 +327,6 @@
                             android:id="@+id/toolBox"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
                             android:orientation="horizontal">
 
                             <com.google.android.material.textfield.TextInputLayout
@@ -343,26 +363,6 @@
                                 android:src="@drawable/ic__notifications" />
                         </RelativeLayout>
 
-                        <TextView
-                            android:id="@+id/title"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/toolBox"
-                            android:layout_centerHorizontal="true"
-                            android:layout_marginVertical="10dp"
-                            android:text="@string/home"
-                            android:textColor="@color/white"
-                            android:textSize="30sp"
-                            android:textStyle="bold" />
-                        <ImageView
-                            android:id="@+id/lnAboutUs"
-                            android:layout_width="wrap_content"
-                            android:layout_height="20dp"
-                            android:layout_below="@+id/toolBox"
-                            android:layout_marginStart="-10dp"
-                            android:layout_marginTop="7dp"
-                            android:contentDescription="@string/image"
-                            android:src="@drawable/ic_logo" />
                     </RelativeLayout>
                 </androidx.appcompat.widget.Toolbar>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
