--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -24,14 +24,6 @@
                 app:elevation="0dp"
                 app:liftOnScroll="false">
 
-
-                <com.google.android.material.appbar.CollapsingToolbarLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:expandedTitleGravity="top"
-                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-
                     <androidx.appcompat.widget.Toolbar
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -110,14 +102,11 @@
                                 android:src="@drawable/ic_logo" />
                         </RelativeLayout>
                     </androidx.appcompat.widget.Toolbar>
-                </com.google.android.material.appbar.CollapsingToolbarLayout>
-
             </com.google.android.material.appbar.AppBarLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
                 android:elevation="8dp"
                 android:orientation="vertical">
 
@@ -128,7 +117,7 @@
                     android:layout_above="@+id/messageBox"
                     android:layout_alignParentTop="true"
                     android:layout_marginTop="0dp"
-                    android:background="@drawable/bg_message"
+                    android:background="@color/white"
                     android:orientation="horizontal">
 
                     <androidx.recyclerview.widget.RecyclerView
@@ -136,7 +125,7 @@
                         listMessage="@{viewModel.lstMessageItem}"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginBottom="35dp"
+                        android:layout_marginBottom="10dp"
                         android:paddingTop="10dp"
                         android:visibility="gone"
                         tools:listitem="@layout/item_right_side_message" />
@@ -169,10 +158,9 @@
                 <LinearLayout
                     android:id="@+id/messageBox"
                     android:layout_width="match_parent"
-                    android:layout_height="65dp"
+                    android:layout_height="50dp"
                     android:layout_alignParentBottom="true"
                     android:layout_gravity="bottom"
-                    android:layout_marginTop="10dp"
                     android:layout_marginBottom="0dp"
                     android:background="@color/light_green"
                     android:orientation="horizontal">
@@ -181,7 +169,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginHorizontal="10dp"
                         android:src="@drawable/ic_camera" />
 
                     <RelativeLayout
@@ -189,28 +177,30 @@
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_marginVertical="5dp"
-                        android:layout_marginRight="11dp"
+                        android:layout_marginEnd="11dp"
                         android:background="@drawable/bg_input_edit_text_message"
                         android:orientation="horizontal">
 
                         <com.google.android.material.textfield.TextInputLayout
                             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="40dp"
-                            app:boxBackgroundColor="#00000000"
+                            android:layout_height="match_parent"
+                            app:errorEnabled="false"
+                            android:layout_marginEnd="40dp"
                             app:boxStrokeColor="#00000000"
                             app:boxStrokeWidth="0dp"
                             app:boxStrokeWidthFocused="0dp"
                             app:hintEnabled="false">
 
                             <EditText
+                                android:gravity="center_vertical"
+                                android:padding="0dp"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="match_parent"
                                 android:hint="@string/type_here"
                                 android:inputType="text"
                                 android:text="@={viewModel.newMessage}"
-                                android:textSize="16sp" />
+                                 />
                         </com.google.android.material.textfield.TextInputLayout>
 
                         <ImageView
