--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -101,9 +101,12 @@
                 android:layout_marginTop="120dp"
                 android:orientation="vertical">
                 <LinearLayout
+                    android:layout_marginHorizontal="3dp"
+                    android:layout_marginBottom="10dp"
+                    android:elevation="5dp"
                     android:id="@+id/linearLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="173dp"
+                    android:layout_height="170dp"
                     android:background="@drawable/bg_account_box"
                     android:gravity="center_vertical|center_horizontal"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -111,23 +114,25 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:orientation="vertical">
                     <TextView
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{viewModel.person.Name}"
-                        android:textSize="16dp"
-                        android:layout_marginTop="10dp"
+                        android:textSize="16sp"
+                        android:layout_marginTop="55dp"
                         android:textStyle="bold"
                         android:textAllCaps="true"/>
                     <TextView
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{viewModel.person.email}"
                         android:textStyle="bold"
-                        android:textSize="16dp" />
+                        android:textSize="16sp" />
                 </LinearLayout>
 
                 <LinearLayout
+                    android:elevation="5dp"
                     android:id="@+id/linearLayout2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -144,6 +149,7 @@
                         android:background="@drawable/bg_edit_info">
                         <com.google.android.material.imageview.ShapeableImageView
                             android:layout_width="110dp"
+
                             android:layout_height="110dp"
                             android:scaleType="centerCrop"
                             app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
@@ -170,6 +176,9 @@
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
                 <LinearLayout
+                    android:layout_marginHorizontal="3dp"
+                    android:layout_marginBottom="10dp"
+                    android:elevation="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="18dp"
@@ -252,10 +261,6 @@
                         android:text="   Sign out"
                         android:textSize="16dp"
                         android:textColor="@color/person_color" />
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginHorizontal="20dp"/>
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
@@ -271,9 +276,12 @@
                     android:layout_marginTop="120dp"
                     android:orientation="vertical">
                     <LinearLayout
+                        android:layout_marginHorizontal="3dp"
+                        android:layout_marginBottom="8dp"
                         android:layout_width="match_parent"
                         android:layout_height="173dp"
                         android:paddingTop="20dp"
+                        android:elevation="5dp"
                         android:paddingBottom="40dp"
                         android:paddingHorizontal="18dp"
                         android:background="@drawable/bg_account_box"
@@ -286,13 +294,14 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="You did not signed in yet."
-                            android:textSize="16dp"
+                            android:textSize="16sp"
                             android:layout_marginTop="10dp"
                             android:textStyle="bold"
                             android:elevation="0dp"/>
                         <androidx.appcompat.widget.AppCompatButton
-                            android:id="@+id/signIn"
                             android:layout_marginTop="20dp"
+                            style="@style/Widget.AppCompat.Button.Borderless"
+                            android:id="@+id/signIn"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/bg_person_button"
@@ -300,12 +309,8 @@
                             android:textAlignment="textStart"
                             android:textAllCaps="false"
                             android:text="   Login or sign up now"
-                            android:textSize="16dp"
+                            android:textSize="16sp"
                             android:textColor="@color/person_color" />
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_marginHorizontal="20dp"/>
                     </LinearLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </LinearLayout>
