--- a/app/src/main/res/layout/item_right_side_message.xml
+++ b/app/src/main/res/layout/item_right_side_message.xml
@@ -1,41 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
+
         <variable
             name="messageItem"
             type="com.example.aposs_buyer.model.MessageItem" />
     </data>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_gravity="right"
-    android:gravity="right"
-    android:layout_marginRight="15dp"
-    android:layout_marginTop="10dp">
-    <TextView
-        android:id="@+id/tv_time"
-        android:layout_width="wrap_content"
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="11dp"
-        android:layout_marginRight="15dp"
-        message="@{messageItem.timeString}"
-        android:textColor="@color/gray"
-        android:layout_gravity="center"/>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:background="@drawable/bg_right_side_message"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="5dp"
         android:orientation="horizontal">
-<TextView
-    android:id="@+id/tv_message"
-    android:layout_width="230dp"
-    android:layout_height="wrap_content"
-    android:textColor="@color/white"
-    android:textSize="14dp"
-    message="@{messageItem.massage}"
-    android:textStyle="bold"/>
-</LinearLayout>
-</LinearLayout>
+
+        <TextView
+            android:gravity="end"
+            android:layout_marginEnd="15dp"
+            android:id="@+id/tv_time"
+            message="@{messageItem.timeString}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/messageLayout"
+            android:textColor="@color/gray" />
+
+        <LinearLayout
+            android:id="@+id/messageLayout"
+            android:layout_alignParentEnd="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_right_side_message"
+            android:orientation="horizontal"
+            android:padding="15dp">
+            <TextView
+                android:id="@+id/tv_message"
+                message="@{messageItem.massage}"
+                android:layout_width="230dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="14dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </RelativeLayout>
 </layout>
